--- a/index.html
+++ b/index.html
@@ -143,28 +143,32 @@
                         Current total to pay: {{ totalToPay.toFixed(2) }} GBP
                         <br><br>
             
-                        <table>
-                            <tr>
-                                <th></th>
-                                <th>Inv No</th>
-                                <th>Inv ID</th>
-                                <th class="px-4 text-right">Inv Date</th>
-                                <th class="px-4 text-right">Inv Amt</th>
-                                <th class="px-4 text-right">Paid</th>
-                            </tr>
-                            <tr v-for="(invoice, index) in invoices">
-                                <td class="px-4"><input type="checkbox" v-model="checkedInvoices[index]" @click="updatePayment(index)"/></td>
-                                <td class="px-4">{{invoice.number}}</td>
-                                <td class="px-4">{{invoice.id}}</td>
-                                <td class="px-4">{{invoice.date}}</td>
-                                <td class="px-4 text-right">{{invoice.amount}}</td>
-                                <td class="px-4 text-right">{{invoice.paid}}</td>
-                            </tr>
-                            <tr>
-                                <td></td><td></td><td></td><td></td>
-                                <td class="px-4 text-right">{{ paymentsSum(invoices) }}</td><td class="px-4 text-right">{{ totalToPay.toFixed(2) }}</td>
-                            </tr>
-                        </table>
+                        <div v-if="invoices">
+                            <div v-if="invoices.length > 0">
+                                <table>
+                                    <tr>
+                                        <th></th>
+                                        <th>Inv No</th>
+                                        <th>Inv ID</th>
+                                        <th class="px-4 text-right">Inv Date</th>
+                                        <th class="px-4 text-right">Inv Amt</th>
+                                        <th class="px-4 text-right">Paid</th>
+                                    </tr>
+                                    <tr v-for="(invoice, index) in invoices">
+                                        <td class="px-4"><input type="checkbox" v-model="checkedInvoices[index]" @click="updatePayment(index)"/></td>
+                                        <td class="px-4">{{invoice.number}}</td>
+                                        <td class="px-4">{{invoice.id}}</td>
+                                        <td class="px-4">{{invoice.date}}</td>
+                                        <td class="px-4 text-right">{{invoice.amount}}</td>
+                                        <td class="px-4 text-right">{{invoice.paid}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td></td><td></td><td></td><td></td>
+                                        <td class="px-4 text-right">{{ paymentsSum(invoices) }}</td><td class="px-4 text-right">{{ totalToPay.toFixed(2) }}</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                         
                 </section>
