Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                <td></td>
                                <td></td>
                                <td></td>
-                               <td>{{ sum(vendorInvoices) }}</td>
+                               <td>{{ reviewSum(vendorInvoices) }}</td>
                                <td></td>
                                <td></td>
                             </tr>
