Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                                 <th>Reference</th>
                                 <th>Invoice Date</th>
                                 <th>Description</th>
-                                <th>Total</th>
-                                <th>Paid</th>
-                                <th>Outstanding</th>
+                                <th class="text-end">Total</th>
+                                <th class="text-end">Paid</th>
+                                <th class="text-end">Outstanding</th>
                                 <th>Payment Date</th>
                             </tr>
                         </thead>
