Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                <td></td>
                                <td class="text-end">{{ reviewTotalSum(vendorInvoices).toFixed(2) }}</td>
                                <td class="text-end">{{ reviewPaidSum(vendorInvoices).toFixed(2) }}</td>
-                               <td class="text-end"></td>
+                               <td class="text-end">{{ reviewOutstandingSum(vendorInvoices).toFixed(2) }}</td>
                                <td class="text-end"></td>
                             </tr>
                         </tbody>
