Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
                         
                 </section>
             </div>
+            <div v-if="paymentsSummaryPage">
+                Payments summary here (loop through the payments suppliers array)
+            </div>
         </div>
     </div>
     <script src="https://unpkg.com/vue@3.0.5"></script>
