--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				    <nav class="white">
 				        <div>
 				            <p class="text-center text-light display-5 p-8">
-				                Purchase ledger{{ vendorInvoices.supplier['Ulreco'][1].amount }}   {{paymentsSelected}}Vendor invoices {{vendorInvoices}}
+				                Purchase ledger{{ vendorInvoices.supplier }}   {{paymentsSelected}}Vendor invoices {{vendorInvoices}}
 							</p>
 				        </div>
 				        <div class="btn-group" role="group">
