--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                         <td class="px-4">{{invoice.id}}</td>
                                         <td class="px-4">{{invoice.date}}</td>
                                         <td class="px-4 text-right">{{invoice.amount}}</td>
-                                        <td class="px-4 text-right">{{invoice.paid}}</td>
+                                        <td class="px-4 text-right">{{paymentsSelected.supplier['Ulreco'][index]}}</td>
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td></td>
