--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td></td>
-                                        <td class="px-4 text-right">{{ paymentsSum(paymentsSelected.supplier['Ulreco']) }}</td><td class="px-4 text-right">{{ totalToPay.toFixed(2) }}</td>
+                                        <td class="px-4 text-right">{{ paymentsSum(vendorInvoices) }}</td><td class="px-4 text-right">{{ totalToPay.toFixed(2) }}</td>
                                     </tr>
                                 </table>
                             </div>
