--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        Current total to pay: {{ totalToPay }} GBP
+                        Current total to pay: {{ totalToPay.toFixed(2) }} GBP
                         <br><br>
                         <div v-if="invoices">
                             <div v-if="invoices.length > 0">
