Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                         <td class="px-4 text-right">{{paymentsSelected.supplier[paymentsSupplier][index]}}</td>
                                     </tr>
                                     <tr>
-                                        <td></td><td></td><td></td><td></td>
+                                        <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
                                         <td class="px-4 text-right">{{ paymentsSum(vendorInvoices) }}</td><td class="px-4 text-right">{{ totalToPay.toFixed(2) }}</td>
                                     </tr>
                                 </table>
