Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                         <td class="px-4">{{invoice.id}}</td>
                                         <td class="px-4">{{invoice.date}}</td>
                                         <td class="px-4 text-right">{{invoice.amount}}</td>
-                                        <td class="px-4 text-right">{{paymentsSelected[supplier][index]}}</td>
+                                        <td class="px-4 text-right">{{paymentsSelected[String(supplier)][index]}}</td>
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
