Modified app, index

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
-                                        <td class="px-4 text-right">{{ paymentsSum(vendorInvoices).toFixed(2) }}</td><td class="px-4 text-right">{{ totalToPay.toFixed(2) }}</td>
+                                        <td class="px-4 text-right">{{ paymentsSum(vendorInvoices).toFixed(2) }}</td><td class="px-4 text-right">{{ totalToPay }}</td>
                                     </tr>
                                 </table>
                             </div>
