Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             {{ key }}
                         </div>
                         <div class="col">
-                            {{ value.toFixed(2) }}
+                            {{ value }}
                         </div>
                         <div class="col-10">
                             
