--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                         <th class="px-4 text-right">Inv Amt</th>
                                         <th class="px-4 text-right">Paid</th>
                                     </tr>
-                                    <tr v-for="(invoice, index) in vendorInvoices">
+                                    <tr v-for="(invoice, index) in vendorInvoices[suppl]">
                                         <td class="px-4"><input type="checkbox" v-model="invoice.checked" @click="updatePayment(index)"/></td>
                                         <td class="px-4">{{invoice.number}}</td>
                                         <td class="px-4">{{invoice.id}}</td>
