Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <div class="col">
                     </div>
                     <div class="col">
-                        {{ paymentsSelected[suppl].grandTotal }}
+                        {{ paymentsSelected[suppl].totalToPay }}
                     </div>
                     <div class="col-10">
                             
