--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <div class="col">
                     </div>
                     <div class="col">
-                        {{ totalPaid[suppl] }}{{ paymentsSum(suppl).toFixed(2) }}
+                        {{ paymentsSum(suppl).toFixed(2) }}
                     </div>
                     <div class="col-10">
                             
