--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
-                                        <td class="px-4 text-right">{{ paymentsSum(vendorInvoices).toFixed(2) }}</td><td class="px-4 text-right">{{ totalToPay.toFixed(2) }}</td>
+                                        <td class="px-4 text-right"></td><td class="px-4 text-right">{{ paymentsSum(vendorInvoices).toFixed(2) }}</td>
                                     </tr>
                                 </table>
                             </div>
@@ -207,7 +207,7 @@
                     <div class="col">
                     </div>
                     <div class="col">
-                        {{ paymentsSum(suppl).toFixed(2) }}
+                        {{ paymentsSum(vendorInvoices) }}
                     </div>
                     <div class="col-10">
                             
