--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <div class="col">
                     </div>
                     <div class="col">
-                        {{ paymentsSum(vendorInvoices) }}
+                        {{ paymentsSum(vendorInvoices) }}{{vendorInvoices}}
                     </div>
                     <div class="col-10">
                             
