Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <div class="col">
                     </div>
                     <div class="col">
-                        {{ paymentsSum(vendorInvoices) }}{{vendorInvoices}}
+                        {{ totalPaid[suppl] }}
                     </div>
                     <div class="col-10">
                             
