--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <div class="col">
                     </div>
                     <div class="col">
-                        {{ totalPaid[suppl] }}
+                        {{ totalPaid }}{{suppl}}
                     </div>
                     <div class="col-10">
                             
