--- a/index.html
+++ b/index.html
@@ -206,8 +206,10 @@
                 <div class="row">
                     <div class="col">
                     </div>
-                    <div class="col">
-                        {{ totalPaid }}{{suppl}}
+                    <div class="col" v-for="supplier in totalPaid">
+                        
+                        {{ totalPaid['Ulreco'] }}
+                        {{ totalPaid["Indigo Arrow"] }}
                     </div>
                     <div class="col-10">
                             
