Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
                     </div>
                     <div class="col" v-for="supplier in totalPaid">
                         
-                        {{ totalPaid['Ulreco'] }}
-                        {{ totalPaid["Indigo Arrow"] }}
-                    </div>
+                        tpu{{ totalPaid['Ulreco'] }}
+                        tpi{{ totalPaid }}
+                    </div>{{ totalPaid['Ulreco'] }}
                     <div class="col-10">
                             
                     </div>
