--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
                 <div class="row">
                     <div class="col">
                     </div>
-                    <div class="col" v-for="supplier in totalPaid">
-                        
-                        tpu{{ totalPaid['Ulreco'] }}
+                    <div class="col" v-for="key in totalPaid">
+                        12
+                        tpu{{ key }}
                         tpi{{ totalPaid }}
-                    </div>{{ totalPaid['Ulreco'] }}
+                    </div>{{ totalPaid['Ulreco'] }}{{typeof totalPaid}}
                     <div class="col-10">
                             
                     </div>
