Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				            </div>
                     <p class="text-center py-5"></p>
                     <label>Supplier Name:</label>
-                    <input type="text" name="supplier" v-model="suppl"></input>
+                    <input type="text" name="supplier" :value="suppl"></input>
                     <button class="btn btn-info" @click="processPayments">
 				        Process payments 
 				    </button>
