--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                     <div>
-                        Total paid:
+                        Total paid: {{ totalPaid }}
                     </div>
                 </div>
                 <div v-else>
