Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                     <div>
-                        Total paid: {{ Object.entries(totalPaid) }}
+                        Total paid: {{ grandTotalPaid }}
                     </div>
                 </div>
                 <div v-else>
