--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <h4 class="center">Payment Processing</h4>
                     <br/>
                     <div class="col-lg-6">
-								<button class="btn btn-info" @click="supplierReview=false; addInvoice=false; suppl=null; payments=false; paymentsSummaryPage=true">
+								<button class="btn btn-info" @click="supplierReview=false; addInvoice=false; payments=false; paymentsSummaryPage=true">
 								    Payments summary
 								</button>
 				            </div>
