Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 								<button class="btn btn-info" @click="supplierReview=false; addInvoice=false; payments=true; paymentsSummaryPage=false">
 								    Payments summary
 								</button>
-                                <button class="btn btn-dark" @click="process">
+                                <button class="btn btn-dark" @click="processPayments">
 								    Process payments
 								</button>
 				            </div>
